fix: get rid of virtual list jumps after scroll

--- a/src/dotnet/UI.Blazor/Components/VirtualList/virtual-list.css
+++ b/src/dotnet/UI.Blazor/Components/VirtualList/virtual-list.css
@@ -57,6 +57,7 @@
 .virtual-list > ul.c-virtual-container > li.item {
     @apply flex flex-y;
     overflow-anchor: none;
+    min-height: 1.5rem;
 }
 
 .virtual-list > ul.c-virtual-container > li.item.anchor {
